[gd_scene load_steps=5 format=3 uid="uid://c7bnurcwj3vvd"]

[ext_resource type="Script" path="res://ListaDeRotulos/ListaDeRotulos.gd" id="1_vjywb"]
[ext_resource type="Texture2D" uid="uid://bkap82yfxh37r" path="res://Icones/TresSetas.png" id="2_3bg5c"]
[ext_resource type="Texture2D" uid="uid://dqhn1dl4wht44" path="res://Icones/DuasSetas.png" id="3_7bc61"]
[ext_resource type="Texture2D" uid="uid://kxoqbb3jvou1" path="res://Icones/UmaSeta.png" id="4_b454m"]

[node name="ListaDeRotulos" type="Node2D"]
script = ExtResource("1_vjywb")

[node name="Margem" type="ColorRect" parent="."]
offset_left = 850.0
offset_top = 30.0
offset_right = 853.0
offset_bottom = 645.0
mouse_default_cursor_shape = 10
color = Color(0.2, 0.2, 0.2, 1)

[node name="Fundo" type="ColorRect" parent="."]
offset_left = 852.0
offset_top = 30.0
offset_right = 1149.0
offset_bottom = 645.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Lista" type="VBoxContainer" parent="Fundo"]
layout_mode = 0
offset_right = 297.0
offset_bottom = 582.0
mouse_filter = 2

[node name="EsquerdaTres" type="ColorRect" parent="."]
offset_left = 853.0
offset_top = 615.0
offset_right = 883.0
offset_bottom = 645.0
mouse_default_cursor_shape = 2
color = Color(0, 0, 0, 1)

[node name="Icone" type="TextureRect" parent="EsquerdaTres"]
self_modulate = Color(0.2, 0.2, 0.2, 1)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2
texture = ExtResource("2_3bg5c")
expand_mode = 1

[node name="EsquerdaDois" type="ColorRect" parent="."]
offset_left = 886.0
offset_top = 615.0
offset_right = 916.0
offset_bottom = 645.0
mouse_default_cursor_shape = 2
color = Color(0, 0, 0, 1)

[node name="Icone" type="TextureRect" parent="EsquerdaDois"]
self_modulate = Color(0.2, 0.2, 0.2, 1)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2
texture = ExtResource("3_7bc61")
expand_mode = 1

[node name="EsquerdaUm" type="ColorRect" parent="."]
offset_left = 919.0
offset_top = 615.0
offset_right = 949.0
offset_bottom = 645.0
mouse_default_cursor_shape = 2
color = Color(0, 0, 0, 1)

[node name="Icone" type="TextureRect" parent="EsquerdaUm"]
self_modulate = Color(0.2, 0.2, 0.2, 1)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2
texture = ExtResource("4_b454m")
expand_mode = 1

[node name="DireitaTres" type="ColorRect" parent="."]
offset_left = 1119.0
offset_top = 615.0
offset_right = 1149.0
offset_bottom = 645.0
mouse_default_cursor_shape = 2
color = Color(0, 0, 0, 1)

[node name="Icone" type="TextureRect" parent="DireitaTres"]
self_modulate = Color(0.2, 0.2, 0.2, 1)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2
texture = ExtResource("2_3bg5c")
expand_mode = 1
flip_h = true

[node name="DireitaDois" type="ColorRect" parent="."]
offset_left = 1086.0
offset_top = 615.0
offset_right = 1116.0
offset_bottom = 645.0
mouse_default_cursor_shape = 2
color = Color(0, 0, 0, 1)

[node name="Icone" type="TextureRect" parent="DireitaDois"]
self_modulate = Color(0.2, 0.2, 0.2, 1)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2
texture = ExtResource("3_7bc61")
expand_mode = 1
flip_h = true

[node name="DireitaUm" type="ColorRect" parent="."]
offset_left = 1053.0
offset_top = 615.0
offset_right = 1083.0
offset_bottom = 645.0
mouse_default_cursor_shape = 2
color = Color(0, 0, 0, 1)

[node name="Icone" type="TextureRect" parent="DireitaUm"]
self_modulate = Color(0.2, 0.2, 0.2, 1)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2
texture = ExtResource("4_b454m")
expand_mode = 1
flip_h = true
